# iga

./: .gitignore  CMakeLists.txt  README.md  main.cpp
basis/: CMakeLists.txt
basis/include/: igaBasis.h  igaBasisFun.hpp  igaBoundary.h  igaDomainIterator.hpp  igaFunction.h  igaFunctionSet.h
basis/src/: igaBasis.cpp  igaBoundary.cpp  igaFunction.cpp  igaFunctionSet.cpp
basis/tensor/include/: igaTensorBasis.h
basis/test/: test.cpp
configuration/: config.h  igaColor.h  igaDebug.h
matrix/: CMakeLists.txt
matrix/include/: MatrixAddons.h  accessory_func.h  igaMatrix.h  igaVector.h
util/: common_util.h  memoizer.h
